Task "Introduction to SQL" - rework